--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 	<h1>Welcome to the Chat App</h1>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		//Calling this method requests the server to create and keep a connection open.
+		var socket = io();
+
+		socket.on('connect', () => console.log('Connected to Sever'));
+		socket.on('disconnect', () => console.log('Disconnected from Sever'));
+	</script>
 </body>
 </html>
