--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<input type="text" name="message" placeholder="Type message">
 		<button>Send</button>
 	</form>
-	<button id="#sendLoc">Send Location</button>
+	<button id="sendLoc">Send Location</button>
 
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/lib/jquery-3.2.1.min.js"></script>
